--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -10,6 +10,10 @@
     <img src="https://encrypted-tbn2.gstatic.com/images?q=tbn:ANd9GcSwGoDVUDPLd8f_397Fp9BrLKlu-6msu0sSiT0LeEZQ8Ga2228z">
 
     <!-- Insert Your Form Below -->
-
+    <form class="" action="index.html" method="post">
+      <p>your Name: <input type="text"></p>
+      <p><input type="submit" name="" value=""></p>
+    </form>
+    
   </body>
 </html>
