--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -12,8 +12,8 @@
     <!-- Insert Your Form Below -->
     <form class="" action="index.html" method="post">
       <p>your Name: <input type="text"></p>
-      <p><input type="submit" name="" value=""></p>
+      <p>Your Favorite Food: <input type="text"></p>
     </form>
-    
+
   </body>
 </html>
