automatically backed up by learn

--- a/views/food_form.erb
+++ b/views/food_form.erb
@@ -13,6 +13,7 @@
     <form class="" action="index.html" method="post">
       <p>your Name: <input type="text"></p>
       <p>Your Favorite Food: <input type="text"></p>
+      <input type="submit">
     </form>
 
   </body>
